--- a/gradle.properties
+++ b/gradle.properties
@@ -18,3 +18,5 @@ org.gradle.jvmargs=-Xmx1536m
 
 VERSION_NAME=1.5.2-SNAPSHOT
 GROUP=com.facebook.stetho
+android.useAndroidX=true
+android.enableJetifier=true
